WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298581
REGRESSION(
299694@main
) - Build error on tvOS: Undefined symbol scriptExecutionContext()
https://bugs.webkit.org/show_bug.cgi?id=298581
Summary
REGRESSION(299694@main) - Build error on tvOS: Undefined symbol scriptExecuti...
Jer Noble
Reported
2025-09-08 20:32:56 PDT
REGRESSION(
299694@main
) - Build error on tvOS: Undefined symbol scriptExecutionContext()
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-09-08 20:32:57 PDT
<
rdar://problem/160156730
>
Jer Noble
Comment 2
2025-09-08 20:35:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50481
EWS
Comment 3
2025-09-08 22:25:00 PDT
Committed
299739@main
(401f52e491ff): <
https://commits.webkit.org/299739@main
> Reviewed commits have been landed. Closing PR #50481 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug