REGRESSION(299694@main) - Build error on tvOS: Undefined symbol scriptExecutionContext() rdar://160156730 https://bugs.webkit.org/show_bug.cgi?id=298581

Unreviewed build fix; add missing include of "ContextDestructionObserverInlines.h"

* Source/WebCore/Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:

Canonical link: https://commits.webkit.org/299739@main